--- a/index.html
+++ b/index.html
@@ -22,38 +22,87 @@
       <p>My Tickets</p>
     </nav>
     <div class="ticket-container">
-      <div class="ticket">
-        <div class="ticket-nav">Standard Ticket</div>
-        <div class="ticket-nav2">
-          <p>
-            SEC <br />
-            <strong>Floor</strong>
-          </p>
-          <p>
-            ROW<br />
-            <strong>GA</strong>
-          </p>
-          <p>
-            SEAT <br />
-            <strong>-</strong>
-          </p>
+      <div class="tickets">
+        <div class="ticket">
+          <div class="ticket-nav">Standard Ticket</div>
+          <div class="ticket-nav2">
+            <p>
+              SEC <br />
+              <strong>Floor</strong>
+            </p>
+            <p>
+              ROW<br />
+              <strong>GA</strong>
+            </p>
+            <p>
+              SEAT <br />
+              <strong>-</strong>
+            </p>
+          </div>
           <div class="image-container">
-            <img src="images/ticket-img.jpg" alt="ticket" width="100%" />
-            <p>Harry Styles - Love on Tour</p>
-            <p>Fri Jul 29, 9:00pm • WiZink Center</p>
+            <div>
+              <p class="tour">Harry Styles - Love on Tour</p>
+              <p class="date">Fri Jul 29, 9:00pm • WiZink Center</p>
+            </div>
           </div>
-          <div>
-            <img src="images/button-img.png" alt="button-img" width="100%" />
+          <section>
+            <div>
+              <img src="images/button-img.png" alt="button-img" width="100%" />
+            </div>
+            <div>
+              <a href="">View Barcode</a>
+              <a href="">Ticket Details</a>
+            </div>
+          </section>
+          <img
+            src="images/verified-img.jpg"
+            alt=""
+            width="100%"
+            class="verified"
+          />
+        </div>
+        <div class="ticket">
+          <div class="ticket-nav">Standard Ticket</div>
+          <div class="ticket-nav2">
+            <p>
+              SEC <br />
+              <strong>Floor</strong>
+            </p>
+            <p>
+              ROW<br />
+              <strong>GA</strong>
+            </p>
+            <p>
+              SEAT <br />
+              <strong>-</strong>
+            </p>
           </div>
-          <div>
-            <a href="">View Barcode</a>
-            <a href="">Ticket Details</a>
+          <div class="image-container">
+            <div>
+              <p class="tour">Harry Styles - Love on Tour</p>
+              <p class="date">Fri Jul 29, 9:00pm • WiZink Center</p>
+            </div>
           </div>
-          <img src="images/verified-img.jpg" alt="" width="100%" />
+          <section>
+            <div>
+              <img src="images/button-img.png" alt="button-img" width="100%" />
+            </div>
+            <div>
+              <a href="">View Barcode</a>
+              <a href="">Ticket Details</a>
+            </div>
+          </section>
+          <img
+            src="images/verified-img.jpg"
+            alt=""
+            width="100%"
+            class="verified"
+          />
         </div>
       </div>
-      <div>
-        <button>Transfer</button>
+      <div class="btn-containetr">
+        <button class="transfer-btn">Transfer</button>
+        <button class="sell-btn">Sell</button>
       </div>
     </div>
   </body>
